--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.2",
+    "node-datetime": "^2.0.3",
     "oracledb": "^2.0.15",
     "xml": "^1.0.1"
   },
