--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "mocha tests/ --recursive --timeout 10000",
-    "test:watch" : "mocha tests/ --recursive --watch --timeout 10000",
+    "test:watch": "mocha tests/ --recursive --watch --timeout 10000",
     "start": "nodemon main.js"
   },
   "keywords": [
@@ -22,6 +22,11 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
     "mocha": "^4.1.0",
     "nodemon": "^1.14.5"
   }
