--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,10 @@
 {
-    "extends": "airbnb",
+    "extends": ["eslint-config-airbnb", "mocha/test"],
+    "plugins": [
+        "mocha"
+    ],
     "rules": {
-        "linebreak-style": ["error", "windows"]
+        "linebreak-style": ["error", "windows"],
+        "mocha/no-exclusive-tests": "error"
     }
 }
