--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "express": "^4.16.2",
     "node-datetime": "^2.0.3",
     "oracledb": "^2.0.15",
-    "xml": "^1.0.1"
+    "xml-js": "^1.6.2"
   },
   "devDependencies": {
     "chai": "^4.1.2",
