--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sitemapper",
   "version": "1.0.0",
-  "description": "Creduc3 sitemap generator",
+  "description": "sitemap generator helper",
   "main": "main.js",
   "scripts": {
     "test": "mocha tests/ --recursive --timeout 10000",
@@ -9,10 +9,9 @@
     "start": "nodemon main.js"
   },
   "keywords": [
-    "sitemap",
-    "creduc3"
+    "sitemap"
   ],
-  "author": "Instituto Educar",
+  "author": "Vagner Lucas",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.2",
